# PDS-Redes-Neurais-ITA

./: .gitignore  README.md
Aula 3 - Exercicio 1/: regression.ipynb
Projeto 1/: README.md  exploratory_analysis.ipynb  requirements.txt
Projeto 2/: BCI.ipynb  README.md  requirements.txt
Projeto 3/: README.md  faulty_steel_plates.ipynb  mlsmote.py  requirements.txt
Projeto 4/: pyproject.toml  rodrigo_proj4.ipynb
Projeto 4/dataset/: Placeholder_github.txt
Projeto 5/: pyproject.toml  rodrigo_proj5.ipynb
Projeto Final/Proposta/: LICENSE  README.md  bibliography.bib  main.tex
