# pyproject.toml (inside Projeto 5)
[project]
name = "projeto5"
version = "0.1.0"
requires-python = ">=3.10"

# Add only what you need; you can keep this empty and add later with `uv add`
dependencies = [
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "kagglehub>=0.3.13",
    "keras>=3.11.3",
    "matplotlib>=3.10.7",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "tensorflow>=2.20.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]

[tool.uv.workspace]
members = [
    "help",
]
